# keychat-openclaw

./: .gitignore  .npmignore  README.md  index.ts  openclaw.plugin.json  package.json
.github/workflows/: build.yml  release.yml
bridge/: Cargo.toml
bridge/src/: main.rs  mls.rs  protocol.rs  rpc.rs  signal.rs  transport.rs
docs/: setup-guide.md
scripts/: build-release.sh  install.sh  postinstall.mjs  publish.sh  setup.sh
src/: bridge-client.ts  channel.ts  channel.ts.bak.20260223190046  config-schema.ts  ensure-binary.ts  keychain.ts  lightning.ts  media.ts  notify.ts  nwc.ts  paths.ts  qrcode-types.d.ts  qrcode.ts  runtime.ts  stt.ts  tts.ts  types.ts
tests/: smoke.test.ts
