[package]
name = "keychat-openclaw"
version = "0.1.0"
edition = "2021"

[dependencies]
# Keychat's Signal Protocol storage (same as keychat-app uses)
signal-store = { git = "https://github.com/keychat-io/signal-storage.git", rev = "7ea7392" }

# Nostr protocol (same version as keychat-app)
nostr = { version = "0.39.0", default-features = false, features = [
  "std",
  "nip04",
  "nip06",
  "nip44",
  "nip59",
] }
nostr-relay-pool = { version = "0.39.0" }

# Core dependencies
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
rand = "0.8"
bip39 = { version = "2.0", features = ["rand"] }
bitcoin = "0.32.6"
base64 = "0.22"
shellexpand = "3"
log = "0.4"
env_logger = "0.11"

# MLS (Messaging Layer Security) — Keychat's OpenMLS fork
openmls = { git = "https://github.com/keychat-io/openmls.git", branch = "kc4", package = "openmls" }
openmls_traits = { git = "https://github.com/keychat-io/openmls.git", branch = "kc4", package = "openmls_traits" }
openmls_sqlite_storage = { git = "https://github.com/keychat-io/openmls.git", branch = "kc4", package = "openmls_sqlite_storage" }
kc = { git = "https://github.com/keychat-io/openmls.git", branch = "kc4", package = "kc" }
bincode = "1"
